Changes of HTML file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <body>
 
         <h1>Hello, I'm Umarjon! </h1>
-        <img >
+        <img src="Images/" width="100px" alt="Umarjon Rajabov">
+        <p>
+            I love Github, web development and watching football. I recently graduated from
+            INHA University in Tashkent. I'm looking forward to working in tech world!
+        </p>
+        <a href="inha.uz">Discover INHA</a>
+        <h2>Web development</h2>
     </body>
 </html>
