Giving design by CSS.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,42 @@
 <html>
     <head>
         <title>My profile</title>
+        <meta name="description" content="THis is the profile of Umarjon">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
         <h1>Hello, I'm Umarjon! </h1>
-        <img src="Images/" width="100px" alt="Umarjon Rajabov">
+        <img src="Images/picture.jpg" width="100px" alt="Umarjon Rajabov">
         <p>
             I love Github, web development and watching football. I recently graduated from
             INHA University in Tashkent. I'm looking forward to working in tech world!
         </p>
-        <a href="inha.uz">Discover INHA</a>
+        <a href="https://inha.uz/">Discover INHA</a>
         <h2>Web development</h2>
+        <p>
+            I am passionate about <strong>Web development</strong>.
+        </p>
+        <h2>Backend development</h2>
+        <p>
+            I am passionate about <strong>Backend development</strong>.
+        </p>
+        <h2>watching football</h2>
+        <p>
+            I am passionate about <strong>watching football</strong>.
+        </p>
+        <h2>Follow me</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/UmarjonRajabov" target="_blank"><i class="fab fa-github-alt"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/umarjon4567/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/umarjon.rajabov.3/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            </li>
+        </ul>
     </body>
 </html>
